# adjust-test-assignments

./: Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml
config/: settings.py  urls.py
dataset_api/: models.py  serializers.py  utils.py  views.py
dataset_api/migrations/: 0001_initial.py
dataset_api/tests/: test_api.py  test_import_data.py  test_serializers.py
